# parallel-cli-runner

./: .dockerignore  .gitignore  .gitmodules  ACP-client-plan.md  AGENTS.md  Code Agent CLI Runner (1).make  Code Agent CLI Runner (2).make  Code Agent CLI Runner.make  GIT_FEATURES.md  MY_OWN_FEATURE_LIST.md  README.md  REFACTOR_TODO.md  TODO.md  VSCODE_INTEGRATION_PLAN.md  git-diff-plan.md  git-integration-plan.md  initialize-plan.md  new-line-problem.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  refactor_todo.md  squash-commits-plan.md  tailwind.config.cjs  three-way-merge-plan.md  tsconfig.build.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: desktop-app.yml  type-safety.yml  vscode-extension.yml
.storybook/: main.ts  preview.ts
ai-elements-fork/: .gitignore  LICENSE  README.md  components.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  wrangler.jsonc
ai-elements-fork/app/: entry.client.tsx  entry.server.tsx  root.tsx
ai-elements-fork/components/: icons.tsx  navbar.tsx  theme-switch.tsx
ai-elements-fork/config/: site.ts
ai-elements-fork/functions/: [[path]].ts
artifacts/: parallel-cli-runner-darwin-arm64.vsix
artifacts/parallel-cli-runner-universal/: [Content_Types].xml  extension.vsixmanifest
docker/: Dockerfile  README.md  build.sh  docker-compose.yml
docs/: acp-integration.md  acp-protocol-support-analysis.md  zed-acp.md
docs/protocol/: agent-plan.mdx  content.mdx  error.mdx  extensibility.mdx  file-system.mdx  initialization.mdx  overview.mdx  prompt-turn.mdx  schema.mdx  session-modes.mdx  session-setup.mdx  slash-commands.mdx  terminals.mdx  tool-calls.mdx  transports.mdx
docs/vscode-integration/: extension-dev.md  (+3 more)
e2e/: example.spec.ts  fixtures.ts  git-panel.spec.ts  git-repo-real.spec.ts  git-test-utils.ts  helpers.ts  worktree-merge-rebase.spec.ts
scripts/: stage-backend.mjs
src/: AGENTS.md  App.css  App.tsx  main.tsx
src-tauri/: .gitignore  AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  command_error.rs  error.rs  export_types.rs  git.rs  lib.rs  logging.rs  main.rs  pty.rs  task_session.rs  utils.rs  ws_server.rs
src-tauri/src/acp/: agent_catalog.rs  message_conversion.rs  mod.rs  runtime.rs  tests.rs  types.rs
src-tauri/src/acp/examples/: agent_example.rs
src-tauri/src/commands/: acp.rs  git.rs  mod.rs
src-tauri/src/git/: branches.rs  diff.rs  error.rs  mod.rs  operations.rs  proxy.rs  remotes.rs  scanner.rs  stashes.rs  status.rs  tags.rs  types.rs  worktrees.rs
src-tauri/src/ws/: mod.rs  router.rs  types.rs
src-tauri/tests/: changes_tab.rs  commits_tab.rs  create_worktree_from_branch.rs  git_backend.rs  git_backend_extended.rs  rebase_all_worktrees.rs  repos_tab.rs  smart_update_worktrees.rs  stashes_tab.rs
src-tauri/tests/common/: git_repo_builder.rs  mod.rs
vscode-extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json
(+231 files in other folders)
