[package]
name = "parallel-cli-runner"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "parallel-cli-runner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "parallel_cli_runner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-std"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-tungstenite = { version = "0.28", features = ["handshake"] }
futures-util = "0.3"
http = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
ts-rs = { version = "10.0", features = ["serde-compat"] }
git2 = "0.20"
sysproxy = "0.3.0"
sha2 = "0.10"
agent-client-protocol = { version = "0.9.2", features = ["unstable_session_model"] }
rfd = "0.14"
open = "5"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
crossbeam = "0.8"
futures = "0.3"
env_logger = "0.11"

[[example]]
name = "agent_example"
path = "src/acp/examples/agent_example.rs"

[[bin]]
name = "parallel-cli-runner"
path = "src/main.rs"

[[bin]]
name = "export_types"
path = "src/bin/export_types.rs"
